--- a/Homey/Info.plist
+++ b/Homey/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>SUFeedURL</key>
-	<string>https://9900a1b47b36.ngrok.io/appcast.xml</string>
+	<string>https://homey-mac-app.athom.com/appcast.xml</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
